--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@
   
 width:60%;
 margin-top:20%;
+box-shadow: 10px 10px 8px 10px #888888;
 }
 .right-clicked-imgs img
 {
@@ -49,4 +50,5 @@ margin-top:20%;
   border-radius:5px solid rgb(69, 69, 69);
   width:90%;
   margin-top:20%;
+  box-shadow: 10px 10px 8px 10px #888888;
 }
